<resources>
    <string name="app_name">Coffeegram</string>
    <string name="calendar">Calendar</string>
    <string name="stats">Stats</string>
    <string name="settings">Settings</string>
    <string name="map_short">Specialty</string>
    <string name="map_long">Specialty Coffee Map</string>
    <string name="add_drink">Drinks</string>
    <string name="app_theme">App theme</string>
    <string name="app_theme_system">System</string>
    <string name="app_theme_light">Light</string>
    <string name="app_theme_dark">Dark</string>
    <string name="app_theme_dynamic">Dynamic</string>
    <string name="app_theme_summer">Summer</string>
    <string name="app_widget_title">Today\'s coffee consumption</string>
    <string name="app_widget_description">Quick access to coffee tracking</string>
    <string name="loading_widget">Loading widget</string>
    <string name="stats_tab_all">All</string>
    <string name="stats_tab_weekly">Weekly</string>
    <string name="manage_drinks">Manage Drinks</string>
    <string name="back">Back</string>
    <string name="add_new_drink">Add New Drink</string>
    <string name="edit_drink">Edit Drink</string>
    <string name="drink_name">Drink Name</string>
    <string name="drink_icon">Drink Icon</string>
    <string name="drink_default_cost">Default Cost</string>
    <string name="save">Save</string>
    <string name="delete_drink">Delete Drink</string>
    <string name="delete_drink_confirm">Delete this drink?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
</resources>
