...
                }
            )
        },
        floatingActionButton = {
            FloatingActionButton(
                onClick = { navigationStore.newIntent(NavigationIntent.ToAddDrinkPage) },
                modifier = Modifier.testTag("AddDrinkButton")
            ) {
                Icon(Icons.Default.Add, stringResource(R.string.add_new_drink))
            }
        }
    ) { paddingValues ->
        LazyColumn(
            modifier = Modifier.padding(paddingValues).fillMaxSize().testTag("DrinkList"),
            contentPadding = PaddingValues(16.dp)
        ) {
            items(drinksState.drinks) { drink ->
                ListItem(
                    headlineContent = { Text(printableText(drink.localizedName)) },
                    leadingContent = {
...
